[package]
name = "gourd"
version = "0.1.0"
edition = "2024"
[dependencies]
# Pumpkin ecosystem
pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-protocol", default-features = false, features = ["serverbound", "clientbound"] }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-util" }
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-data" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto
rsa = "0.9"
rand = { git = "https://github.com/rust-random/rand" }
sha1 = "0.10"
num-bigint = "0.4"
aes = "0.8"
cfb8 = "0.8"
hmac = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Networking/HTTP
ureq = { version = "3", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v3", "v4"] }
bytes = "1"
log = "0.4"
simple_logger = "5"
thiserror = "2"
crossbeam = "0.8"
